--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.16.11",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.7",
